adapted to Java 21